@@ -106,16 +106,15 @@ public class PersistedServiceJob extends GenericServiceJob {
         if (cancelTime != null || startTime != null) {
             // job not available
             throw new InvalidJobException("Job [" + getJobId() + "] is not available");
-        } else {
-            jobValue.set("statusId", "SERVICE_QUEUED");
-            try {
-                jobValue.store();
-            } catch (GenericEntityException e) {
-                throw new InvalidJobException("Unable to set the startDateTime and statusId on the current job [" + getJobId() + "]; not running!", e);
-            }
-            if (Debug.verboseOn()) {
-                Debug.logVerbose("Placing job [" + getJobId() + "] in queue", module);
-            }
+        }
+        jobValue.set("statusId", "SERVICE_QUEUED");
+        try {
+            jobValue.store();
+        } catch (GenericEntityException e) {
+            throw new InvalidJobException("Unable to set the startDateTime and statusId on the current job [" + getJobId() + "]; not running!", e);
+        }
+        if (Debug.verboseOn()) {
+            Debug.logVerbose("Placing job [" + getJobId() + "] in queue", module);
         }
     }
 
@@ -203,9 +202,9 @@ public class PersistedServiceJob extends GenericServiceJob {
             newJob.set("runByInstanceId", null);
             newJob.set("runTime", new java.sql.Timestamp(next));
             if (isRetryOnFailure) {
-                newJob.set("currentRetryCount", new Long(currentRetryCount + 1));
+                newJob.set("currentRetryCount", Long.valueOf(currentRetryCount + 1));
             } else {
-                newJob.set("currentRetryCount", new Long(0));
+                newJob.set("currentRetryCount", Long.valueOf(0));
             }
             nextRecurrence = next;
             delegator.createSetNextSeqId(newJob);
@@ -289,7 +288,7 @@ public class PersistedServiceJob extends GenericServiceJob {
                 }
             }
             if (context == null) {
-                context = new HashMap<String, Object>();
+                context = new HashMap<>();
             }
             // check the runAsUser
             if (UtilValidate.isNotEmpty(jobValue.getString("runAsUser"))) {
